--- a/recipe-page-main/styles.css
+++ b/recipe-page-main/styles.css
@@ -23,8 +23,9 @@ body {
   display: flex;
   flex-direction: column;
   background-color: hsl(0, 0%, 100%);
-  width: 600px;
+  width: 615px;
   padding: 35px;
+  margin: 100px 0;
   border-radius: 20px;
   
 }
@@ -163,6 +164,7 @@ strong {
   .recipe-card {
     width: 100%;
     padding: 0;
+    margin: 0;
   }
   
   .text-content {
