--- a/testimonials-grid-section-main/styles.css
+++ b/testimonials-grid-section-main/styles.css
@@ -4,11 +4,17 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
   justify-content: center;
+  align-items: center;
   font-family: 'Barlow Semi Condensed';
   background-color: hsl(214, 17%, 92%);
+  height: 100%;
 }
 
 .symbol{
@@ -79,6 +85,7 @@ body {
   padding: 30px 50px;
   gap: 30px;
   max-width: 1200px;
+  max-height: 680px;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
