--- a/nft-preview-card-component-main/styles.css
+++ b/nft-preview-card-component-main/styles.css
@@ -92,6 +92,7 @@ body {
 .nft-card__amount span {
   color: hsl(217, 20%, 59%);
   font-size: 0.8rem;
+  white-space: nowrap;
 }
 .nft-card .author-creation {
   display: flex;
