--- a/room-homepage-master/styles.scss
+++ b/room-homepage-master/styles.scss
@@ -65,6 +65,9 @@ body {
       grid-row: 1 / 3;
       width: 100%;
       height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
 
       .text-content__discover {
         padding: 90px 75px;
@@ -188,7 +191,7 @@ body {
     &:has(.overlay-navigation:not(.hidden)) {
       overflow: hidden;
     }
-    
+
 
     .room-page-grid {
       display: block;
